<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.hsworms.flashcards.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_edit"
            app:destination="@id/nav_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_flashcard"
        android:name="de.hsworms.flashcards.ui.flashcard.FlashcardFragment"
        android:label="@string/menu_flashcard"
        tools:layout="@layout/flashcard_layout">

        <argument
            android:name="toEdit"
            app:argType="de.hsworms.flashcard.database.entity.RepositoryCardCrossRef[]" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit"
        android:name="de.hsworms.flashcards.ui.edit.EditFragment"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_edit">

        <argument
            android:name="toEdit"
            app:argType="de.hsworms.flashcard.database.entity.RepositoryCardCrossRef" />
    </fragment>

    <fragment
        android:id="@+id/nav_cardlist"
        android:name="de.hsworms.flashcards.ui.cardlist.CardListFragment"
        android:label="@string/menu_cardlist"
        tools:layout="@layout/fragment_cardlist">
        <action
            android:id="@+id/action_nav_cardlist_to_nav_flashcard"
            app:destination="@id/nav_flashcard" />
    </fragment>

    <action android:id="@+id/action_global_nav_cardlist" app:destination="@id/nav_cardlist" />
    <action android:id="@+id/action_global_nav_home" app:destination="@id/nav_home" />
</navigation>