<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.EditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/fragment_home_header_constraint_layout"
            layout="@layout/header_layout_generic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repository_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/repository_spinner_label_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_header_constraint_layout" />

        <Spinner
            android:id="@+id/repository_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/repository_spinner_label"
            app:layout_constraintTop_toBottomOf="@+id/fragment_home_header_constraint_layout" />

        <TextView
            android:id="@+id/card_edit_front_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/repository_edit_front_label_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repository_spinner_label" />

        <EditText
            android:id="@+id/card_edit_front"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repository_edit_front_label_hint"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_edit_front_label"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/card_edit_back_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/repository_edit_back_label_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_edit_front" />

        <EditText
            android:id="@+id/card_edit_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repository_edit_back_label_hint"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_edit_back_label"
            android:inputType="text"
            android:importantForAutofill="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#0B4CD9"
        app:fabCradleMargin="7dp"
        app:fabCradleRoundedCornerRadius="27dp"
        app:fabCradleVerticalOffset="5dp"
        app:navigationIcon="@drawable/ic_back" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bottom_app_bar_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_24"
        app:backgroundTint='#0B4CD9'
        app:layout_anchor="@id/bottom_app_bar"
        app:maxImageSize="35dp"
        app:tint='@color/colorWhite' />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
